# memory_structures_perf

./: mem_report.sh
binary_tree/: Cargo.toml
binary_tree/src/: main.rs  model.rs  parser.rs
rust_impl/: Cargo.toml  README.md
rust_impl/resources/test/: ex_1.json
rust_impl/src/: main.rs
scala_impl/: README.md  build.sbt
scala_impl/src/main/scala/com/acervera/performance/: Config.scala  Main.scala  Model.scala  Parser.scala
scala_impl/src/test/resources/: ex_2.jsons
scala_impl/src/test/scala/com/acervera/performance/: ParserSpec.scala
