[package]
name = "rust-performance"
description = "Binary tree and HashMap memory usage comparation."
version = "0.1.0"
authors = ["Angel Cervera Claudio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
